make sidebar and main block with color

--- a/Milestone-1/index.html
+++ b/Milestone-1/index.html
@@ -10,8 +10,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<body>
+<body class="d-flex align-items-center justify-content-center">
     
+        <main id="app" class="d-flex ">
+            
+            <div class="sidebar">
+
+            </div>
+
+            <div class="right_bar d-flex flex-column">
+
+                <div class="message_container"></div>
+
+                <div class="bottom_bar"></div>
+            </div>
+
+
+        </main>
+
 
 
 
