--- a/Milestone-1/index.html
+++ b/Milestone-1/index.html
@@ -41,8 +41,59 @@
                     <input class="form-control bg-black m-1 text-light" type="text" placeholder="Find or start a new chat" aria-label="searchContact">
                 </div>
 
-                <div class="contacts">
-                    <p>orporis. Sequi repellat, laborum at deleniti dolorem iusto totam minus.</p>
+                <div class="contacts ">
+                    <div class="single_contact d-flex justify-content-between p-1">
+                        <div class="left_pack d-flex">
+                            <div class="sub_left_pack">
+                                <img class="img-fluid rounded-circle" src="./assets/img/avatar_1.jpg" alt="contact x avatar">
+                            </div>
+                            <div class="sub_right_pack d-flex flex-column justify-content-around px-1">
+                                <span>Cinzia</span>
+                                <span class="text_small">Last sent message</span>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <div class="single_contact d-flex justify-content-between p-1">
+                        <div class="left_pack d-flex">
+                            <div class="sub_left_pack">
+                                <img class="img-fluid rounded-circle" src="./assets/img/avatar_1.jpg" alt="contact x avatar">
+                            </div>
+                            <div class="sub_right_pack d-flex flex-column justify-content-around px-1">
+                                <span>Cinzia</span>
+                                <span class="text_small">Last sent message</span>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <div class="single_contact d-flex justify-content-between p-1">
+                        <div class="left_pack d-flex">
+                            <div class="sub_left_pack">
+                                <img class="img-fluid rounded-circle" src="./assets/img/avatar_1.jpg" alt="contact x avatar">
+                            </div>
+                            <div class="sub_right_pack d-flex flex-column justify-content-around px-1">
+                                <span>Cinzia</span>
+                                <span class="text_small">Last sent message</span>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <div class="single_contact d-flex justify-content-between p-1">
+                        <div class="left_pack d-flex">
+                            <div class="sub_left_pack">
+                                <img class="img-fluid rounded-circle" src="./assets/img/avatar_1.jpg" alt="contact x avatar">
+                            </div>
+                            <div class="sub_right_pack d-flex flex-column justify-content-around px-1">
+                                <span>Cinzia</span>
+                                <span class="text_small">Last sent message</span>
+                            </div>
+
+                        </div>
+
+                    </div>
                 </div>
 
             </div>
