create new static contacts

--- a/Milestone-1/index.html
+++ b/Milestone-1/index.html
@@ -42,7 +42,8 @@
                 </div>
 
                 <div class="contacts ">
-                    <div class="single_contact d-flex justify-content-between p-1">
+                    <div class="single_contact d-flex justify-content-between p-2
+                    my-1">
                         <div class="left_pack d-flex">
                             <div class="sub_left_pack">
                                 <img class="img-fluid rounded-circle" src="./assets/img/avatar_1.jpg" alt="contact x avatar">
@@ -51,48 +52,55 @@
                                 <span>Cinzia</span>
                                 <span class="text_small">Last sent message</span>
                             </div>
-
                         </div>
-
+                        <div class="right_pack d-flex">
+                            <span class="text_small">12:00</span>    
+                        </div>
                     </div>
-                    <div class="single_contact d-flex justify-content-between p-1">
+                    <div class="single_contact d-flex justify-content-between p-2
+                    my-1">
                         <div class="left_pack d-flex">
                             <div class="sub_left_pack">
-                                <img class="img-fluid rounded-circle" src="./assets/img/avatar_1.jpg" alt="contact x avatar">
+                                <img class="img-fluid rounded-circle" src="./assets/img/avatar_2.jpg" alt="contact x avatar">
                             </div>
                             <div class="sub_right_pack d-flex flex-column justify-content-around px-1">
-                                <span>Cinzia</span>
+                                <span>Matteo</span>
                                 <span class="text_small">Last sent message</span>
                             </div>
-
                         </div>
-
+                        <div class="right_pack d-flex">
+                            <span class="text_small">12:00</span>    
+                        </div>
                     </div>
-                    <div class="single_contact d-flex justify-content-between p-1">
+                    <div class="single_contact d-flex justify-content-between p-2
+                    my-1">
                         <div class="left_pack d-flex">
                             <div class="sub_left_pack">
-                                <img class="img-fluid rounded-circle" src="./assets/img/avatar_1.jpg" alt="contact x avatar">
+                                <img class="img-fluid rounded-circle" src="./assets/img/avatar_3.jpg" alt="contact x avatar">
                             </div>
                             <div class="sub_right_pack d-flex flex-column justify-content-around px-1">
-                                <span>Cinzia</span>
+                                <span>Luca</span>
                                 <span class="text_small">Last sent message</span>
                             </div>
-
                         </div>
-
+                        <div class="right_pack d-flex">
+                            <span class="text_small">12:00</span>    
+                        </div>
                     </div>
-                    <div class="single_contact d-flex justify-content-between p-1">
+                    <div class="single_contact d-flex justify-content-between p-2
+                    my-1">
                         <div class="left_pack d-flex">
                             <div class="sub_left_pack">
-                                <img class="img-fluid rounded-circle" src="./assets/img/avatar_1.jpg" alt="contact x avatar">
+                                <img class="img-fluid rounded-circle" src="./assets/img/avatar_4.jpg" alt="contact x avatar">
                             </div>
                             <div class="sub_right_pack d-flex flex-column justify-content-around px-1">
-                                <span>Cinzia</span>
+                                <span>Alice</span>
                                 <span class="text_small">Last sent message</span>
                             </div>
-
                         </div>
-
+                        <div class="right_pack d-flex">
+                            <span class="text_small">12:00</span>    
+                        </div>
                     </div>
                 </div>
 
