make top bar on right_big_bar

--- a/Milestone-1/index.html
+++ b/Milestone-1/index.html
@@ -16,7 +16,7 @@
             
             <div class="sidebar">
                 <div class="my_profile d-flex justify-content-between
-                align-content-center">
+                align-content-center p-2"><!-- my profile on sidebar -->
                     <div class="left_pack d-flex">
                         <img class="img-fluid rounded-circle" src="./assets/img/avatar_io.jpg" alt="my avatar">
                         <span class="px-1 align-self-center">Nicola</span>
@@ -28,7 +28,7 @@
                     </div>
                 </div>
 
-                <div class="notifications d-flex justify-content-start align-items-center">
+                <div class="notifications d-flex justify-content-start align-items-center"><!-- notifications section -->
                     <div class="left_pack">
                         <i class="rounded-circle bg-dark p-2 fa-solid fa-bell-slash"></i>
                     </div>
@@ -37,11 +37,11 @@
                         <span class="text_small text-decoration-underline">Turn on desktop notifications</span>
                     </div>
                 </div>
-                <div class="search_box d-flex align-content-center">
+                <div class="search_box d-flex align-content-center"><!-- search barcontacts section -->
                     <input class="form-control bg-black m-1 text-light" type="text" placeholder="Find or start a new chat" aria-label="searchContact">
                 </div>
 
-                <div class="contacts ">
+                <div class="contacts "><!-- list of contacts  -->
                     <div class="single_contact d-flex justify-content-between p-2
                     my-1">
                         <div class="left_pack d-flex">
@@ -107,7 +107,29 @@
             </div>
 
             <div class="right_big_bar">
-                <div class="top_bar"></div>
+                <div class="top_bar">
+                    <div class="my_profile d-flex justify-content-between
+                align-content-center p-2"><!-- my profile on sidebar -->
+                    <!-- <div class="left_pack d-flex">
+                        <img class="img-fluid rounded-circle" src="./assets/img/avatar_io.jpg" alt="my avatar">
+                        <span class="px-1 align-self-center">Nicola</span>
+                    </div> -->
+                    <div class="left_pack d-flex">
+                        <div class="sub_left_pack">
+                            <img class="img-fluid rounded-circle" src="./assets/img/avatar_2.jpg" alt="contact x avatar">
+                        </div>
+                        <div class="sub_right_pack d-flex flex-column justify-content-around px-1">
+                            <span>Matteo</span>
+                            <span class="text_small">Last sent message today at 12:00</span>
+                        </div>
+                    </div>
+                    <div class="right_pack d-flex justify-content-around align-items-center">
+                        <i class=" fa-solid fa-magnifying-glass"></i>
+                        <i class="px-1 fa-solid fa-paperclip"></i>
+                        <i class="px-1 fa-solid fa-ellipsis-vertical"></i>
+                    </div>
+                </div>
+                </div>
 
                 <div class="message_container">
                    
