display contact list dinamically

--- a/Milestone-1/index.html
+++ b/Milestone-1/index.html
@@ -47,7 +47,7 @@
                     :class="index === isActive ? 'active' : ''">
                         <div class="left_pack d-flex">
                             <div class="sub_left_pack">
-                                <img class="img-fluid rounded-circle" :src="`./assets/img/{contact.avatar}.jpg`" alt="contact x avatar">
+                                <img class="rounded-circle" :src="`./assets/img/${contact.avatar}.jpg`" alt="contact x avatar">
                             </div>
                             <div class="sub_right_pack d-flex flex-column justify-content-around px-1">
                                 <span>{{contact.name}}</span>
