--- a/Milestone-1&2&3/index.html
+++ b/Milestone-1&2&3/index.html
@@ -41,7 +41,7 @@
                     <input class="form-control bg-black m-1 text-light" type="text" placeholder="Find or start a new chat" aria-label="searchContact">
                 </div>
 
-                <div class="contacts "><!-- list of contacts  -->
+                <div class="contacts "><!-- contacts list  -->
                     <div class="single_contact d-flex justify-content-between p-2 my-1"
                     v-for="(contact, index) in contacts"
                     :class="index === activeContact ? 'active' : ''"
@@ -56,7 +56,7 @@
                             </div>
                         </div>
                         <div class="right_pack d-flex">
-                           <!--  <span class="text_small">{{contact.messages[slice(-1)]date}}</span> -->    
+                            <span class="text_small">{{contact.messages[contact.messages.length - 1].date}}</span>    
                         </div>
                     </div>
                     
@@ -87,8 +87,9 @@
 
                 <div class="message_container">
                     <ul class="p-0 d-flex flex-column">
-                        <li class="card p-2 mx-3 my-2" v-for="(message, index) in contacts[activeContact].messages" :class="message.status">
+                        <li class="card d-flex flex-column p-2 mx-3 my-2" v-for="(message, index) in contacts[activeContact].messages" :class="message.status">
                             {{message.message}}
+                            <span>{{message.date}}</span>
                         </li>
                     </ul>     
                     
