change theme colors

--- a/Milestone-4&5/index.html
+++ b/Milestone-4&5/index.html
@@ -109,7 +109,7 @@
                     <div class="search_box d-flex align-items-center justify-content-around"><!-- search barcontacts section -->
                         <i class="px-3 fa-regular fa-face-surprise"></i>
                         <input 
-                        class="form-control bg-black m-1 text-light" type="text"
+                        class="form-control bg-black m-1 text-light" type="text" placeholder="write a message"
                         @keyup.enter="sendMessage"
                         v-model="textMessage">
                         <i class="px-3 fa-solid fa-microphone"></i>
@@ -124,7 +124,8 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@3/dist/vue.global.min.js"></script>
+
     <script src="./assets/js/app.js"></script>
 </body>
 </html>
